# registration_form

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 292d860f6c01_init.py  fa8c868470b1_max_password.py
my_app/: main.py  main_debug.py
my_app/core/: exception_handlers.py  factory_function.py  lifespan.py
my_app/core/classes/: app.py  database.py  settings.py
my_app/database/DB_docker_for_debug/: docker-compose.yaml
my_app/database/models/: user.py
my_app/routers/: routers.py  utils.py
my_app/routers/auth/: __init__.py  register.py
my_app/routers/schemas/: base.py  user.py
my_app/settings/: app_settings.py
my_app/static/: index.html
nginx/: nginx.conf
static/: register.html
