[project]
name = "registration-form"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Sokolov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "flake8-pie (>=0.16.0,<0.17.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
strict = true